# snakebench

./: .gitignore  README.md  pyproject.toml
data/: awk-2026-W11.parquet  bwa-mem2-2026-W11.parquet  gzip-2026-W11.parquet  samtools-2026-W11.parquet  wgsim-2026-W11.parquet
docs/: architecture.md  audit_flow.md  audit_mode_design.md  integration_notes.md  psb_upstream_mapping.md  technical_summary.md  telemetry_contract.md  walkthrough.md
examples/demo_snakemake/: README.md  Snakefile  config.yaml
notebooks/: psb_pipeline.ipynb
reports/: audit_report.md  audit_table.csv  example_report.md  readiness_report.md
src/snakebench/: __init__.py  advise.py  audit.py  audit_export.py  audit_metrics.py  charts.py  cli.py  features.py  load.py  matching.py  psb.py  readiness.py  report.py  resource_estimation.py  resources.py  schema.py  snakefile.py  summarize.py  telemetry_schema.py
tests/: __init__.py  test_advise.py  test_audit.py  test_audit_export.py  test_audit_metrics.py  test_charts.py  test_features.py  test_matching.py  test_psb.py  test_readiness.py  test_resource_estimation.py  test_resources.py  test_schema.py  test_snakefile.py  test_summarize.py  test_telemetry_schema.py
